# docs/swagger.yaml
@@ -122,7 +122,7 @@ paths:
     get:
       consumes:
       - application/json
-      description: Retrieves a list of all contact requests
+      description: Retrieves a list of all contact requests (Admin access only)
       produces:
       - application/json
       responses:
@@ -134,13 +134,27 @@ paths:
                 $ref: '#/definitions/models.Contact'
               type: array
             type: object
-        "500":
-          description: Internal Server Error
+        "401":
+          description: 'error: Unauthorized'
           schema:
             additionalProperties:
               type: string
             type: object
-      summary: Get all contact requests
+        "403":
+          description: 'error: Forbidden - Admin access required'
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "500":
+          description: 'error: Error message'
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      security:
+      - BearerAuth: []
+      summary: Get all contact requests (Admin)
       tags:
       - contacts
   /login:
